fixing custom album title

--- a/21/index.tpl.html
+++ b/21/index.tpl.html
@@ -17,7 +17,7 @@ $for(site.albums)$
 <p class="album-link">
 <a href="$it.dir$/index.html">
 $it.title$ <br />
-<img src="$it.dir$/$it.image$" width="200" height="200">
+<img src="$it.image$" width="200" height="200">
 </a>
 $if(it.date_time)$
 <br />
