--- a/21/album.tpl.html
+++ b/21/album.tpl.html
@@ -18,7 +18,7 @@ $body$
 $for(images)$
 <p class="photo-item">
 <a href="$it.filename$">
-<img src="$it.filename$" width="200" height="200">
+<img src="$it.filename$" width="$it.thumb_width$" height="$it.thumb_height$">
 </a>
 $if(it.date_time)$
 <br />
